log
Sun 30 Mar 2025 12:38:16 AM UTC: 
 tests:  0|6
total_score: 0/70
25021aa
Sun 30 Mar 2025 12:39:35 AM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:32:12: error: unused variable ‘lista’ [-Werror=unused-variable]
   32 |      List *lista = createList();
      |            ^~~~~
list.c:31:8: error: infinite recursion detected [-Werror=infinite-recursion]
   31 | List * createList() {
      |        ^~~~~~~~~~
list.c:32:20: note: recursive call
   32 |      List *lista = createList();
      |                    ^~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
2041c37
Sun 30 Mar 2025 12:39:47 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:32:12: error: unused variable ‘L’ [-Werror=unused-variable]
   32 |      List *L = createList();
      |            ^
list.c:31:8: error: infinite recursion detected [-Werror=infinite-recursion]
   31 | List * createList() {
      |        ^~~~~~~~~~
list.c:32:16: note: recursive call
   32 |      List *L = createList();
      |                ^~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
9b5f587
Sun 30 Mar 2025 12:42:56 AM UTC: 
 list.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
b4b6cd4
Sun 30 Mar 2025 12:47:09 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:40:24: error: ‘Node’ has no member named ‘dato’; did you mean ‘data’?
   40 |     return list->head->dato;
      |                        ^~~~
      |                        data
list.c:41:1: error: control reaches end of non-void function [-Werror=return-type]
   41 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
89cf684
Sun 30 Mar 2025 12:47:15 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
9ff88cb
